<resources>
    <string name="app_name">Coffee Time</string>
    <string name="fresh_roasted_coffee">Fresh Roasted Coffee</string>
    <string name="minus">-</string>
    <string name="price">PRICE</string>
    <string name="value">0</string>
    <string name="plus">+</string>
    <string name="order">ORDER</string>
    <string name="amount">0</string>
    <string name="_2">2</string>
    <string name="order_summary">Order Summary</string>
    <string name="java_test">JAVA TEST</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="zero">0</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="_10">$10</string>
    <string name="dollar">$10</string>
    <string name="dollar_10">$10</string>
    <string name="ninety_99">99</string>
    <string name="one_1">1</string>
    <string name="quantity">Quantity</string>
    <string name="thank_you">Thank you!</string>
    <string name="order_details">Order Details</string>
</resources>