<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:hint="@string/name"
            android:inputType="textCapWords" />
        <TextView
            android:text="@string/toppings"
            android:layout_marginStart="16dp"
            style="@style/HeaderTextStyle"/>

        <CheckBox
            android:id="@+id/cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:text="@string/whipped_cream"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:text="@string/chocolate"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/quantity"
            style="@style/HeaderTextStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/one_1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/plus"
                android:textSize="24sp" />
        </LinearLayout>
        <!--android:onClick="submitOrder"-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/final_order"
            android:text="@string/order"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>